--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
  } 
 
 * {
-  font-family: 'Proto Grotesk';
+  font: normal 15px "Proto Grotesk", "sans-serif";
 }
 
 #scrolly {
@@ -81,8 +81,10 @@ figure p {
     background-color: #3b3b3b;
 }
      
-.visible-part {
+.visible-part { 
   text-align: center;
-  background-color: #99372e;
+  border: 0.5em solid #99372e;
+  background-color: #fff;
+  color: #000;
   padding: 4em 2em;
 }
